--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://gotriptoday.com/
 Author: Mufaqar
 Author URI: https://mufaqar.com
 Description:  Go Trip Today Theme
-Version: 2.0.1
+Version: 2.0.2
 License: GNU General Public License 
 Text Domain: gt_theme
 Tags: custom theme development for gotriptoday
@@ -115,7 +115,6 @@ textarea:invalid {
 }
 
 @media (min-width: 400px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -127,7 +126,6 @@ textarea:invalid {
 }
 
 @media (min-width: 480px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -139,7 +137,6 @@ textarea:invalid {
 }
 
 @media (min-width: 576px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -151,7 +148,6 @@ textarea:invalid {
 }
 
 @media (min-width: 768px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -163,7 +159,6 @@ textarea:invalid {
 }
 
 @media (min-width: 992px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -175,7 +170,6 @@ textarea:invalid {
 }
 
 @media (min-width: 1200px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -187,7 +181,6 @@ textarea:invalid {
 }
 
 @media (min-width: 1400px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -209,7 +202,6 @@ textarea:invalid {
   font-weight: normal;
   font-style: normal;
 }
-
 
 [class*="icon-"]:before {
   display: inline-block;
@@ -429,7 +421,7 @@ textarea:invalid {
   width: 50%;
 }
 
-.btn-group-sm>.btn,
+.btn-group-sm > .btn,
 .btn-sm {
   padding: 0.375rem 1.25rem;
   font-size: 12px;
@@ -964,7 +956,7 @@ textarea:invalid {
   z-index: 0;
 }
 
-.jarallax>.jarallax-img,
+.jarallax > .jarallax-img,
 picture.jarallax-img img {
   position: absolute;
   -o-object-fit: cover;
@@ -1143,7 +1135,7 @@ picture.jarallax-img img {
   }
 }
 
-.header-area .navbar-nav li>a {
+.header-area .navbar-nav li > a {
   display: inline-block;
   color: #0e0e0e;
   font-weight: 700;
@@ -1162,19 +1154,19 @@ picture.jarallax-img img {
   gap: 6px;
 }
 
-.header-area .navbar-nav li>a i {
+.header-area .navbar-nav li > a i {
   margin-top: 3px;
 }
 
 @media only screen and (min-width: 1200px) {
-  .header-area .navbar-nav li>a {
+  .header-area .navbar-nav li > a {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
 }
 
-.header-area .navbar-nav li>a:hover,
-.header-area .navbar-nav li>a:focus {
+.header-area .navbar-nav li > a:hover,
+.header-area .navbar-nav li > a:focus {
   color: #02a5ce;
 }
 
@@ -1208,7 +1200,7 @@ picture.jarallax-img img {
   }
 }
 
-.header-area .navbar-nav li .touria-dd-menu li>a {
+.header-area .navbar-nav li .touria-dd-menu li > a {
   -webkit-transition: all 350ms;
   transition: all 350ms;
   position: relative;
@@ -1225,21 +1217,20 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-  .header-area .navbar-nav li .touria-dd-menu li>a {
+  .header-area .navbar-nav li .touria-dd-menu li > a {
     padding: 0.375rem 1.5rem;
   }
 }
 
-.header-area .navbar-nav li .touria-dd-menu li>a:hover,
-.header-area .navbar-nav li .touria-dd-menu li>a:focus {
+.header-area .navbar-nav li .touria-dd-menu li > a:hover,
+.header-area .navbar-nav li .touria-dd-menu li > a:focus {
   background-color: transparent;
   color: #02a5ce;
 }
 
 @media only screen and (min-width: 1200px) {
-
-  .header-area .navbar-nav li .touria-dd-menu li>a:hover,
-  .header-area .navbar-nav li .touria-dd-menu li>a:focus {
+  .header-area .navbar-nav li .touria-dd-menu li > a:hover,
+  .header-area .navbar-nav li .touria-dd-menu li > a:focus {
     color: #02a5ce;
   }
 }
@@ -1277,17 +1268,16 @@ picture.jarallax-img img {
   }
 }
 
-.header-area .navbar-nav li.touria-dd>a {
+.header-area .navbar-nav li.touria-dd > a {
   position: relative;
 }
 
-.header-area .navbar-nav li.touria-dd:hover>a,
-.header-area .navbar-nav li.touria-dd:focus>a {
+.header-area .navbar-nav li.touria-dd:hover > a,
+.header-area .navbar-nav li.touria-dd:focus > a {
   color: #02a5ce;
 }
 
 @media only screen and (min-width: 1200px) {
-
   .header-area .navbar-nav li.touria-dd:hover .touria-dd-menu,
   .header-area .navbar-nav li.touria-dd:focus .touria-dd-menu {
     visibility: visible;
@@ -1300,7 +1290,7 @@ picture.jarallax-img img {
   right: 1rem;
 }
 
-.header-area .navbar-nav li.touria-dd .touria-dd>a {
+.header-area .navbar-nav li.touria-dd .touria-dd > a {
   position: relative;
   width: 100%;
 }
@@ -1323,7 +1313,6 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-
   .header-area .navbar-nav li.touria-dd .touria-dd:hover .touria-dd-menu,
   .header-area .navbar-nav li.touria-dd .touria-dd:focus .touria-dd-menu {
     visibility: visible;
@@ -1535,12 +1524,12 @@ picture.jarallax-img img {
   }
 }
 
-.header-area.style-three .navbar-nav li>a {
+.header-area.style-three .navbar-nav li > a {
   color: #0e0e0e;
 }
 
-.header-area.style-three .navbar-nav li>a:hover,
-.header-area.style-three .navbar-nav li>a:focus {
+.header-area.style-three .navbar-nav li > a:hover,
+.header-area.style-three .navbar-nav li > a:focus {
   color: #3cb371;
 }
 
@@ -1555,18 +1544,18 @@ picture.jarallax-img img {
   }
 }
 
-.header-area.style-three .navbar-nav li .touria-dd-menu li>a {
+.header-area.style-three .navbar-nav li .touria-dd-menu li > a {
   color: #0e0e0e;
 }
 
-.header-area.style-three .navbar-nav li .touria-dd-menu li>a:hover,
-.header-area.style-three .navbar-nav li .touria-dd-menu li>a:focus {
+.header-area.style-three .navbar-nav li .touria-dd-menu li > a:hover,
+.header-area.style-three .navbar-nav li .touria-dd-menu li > a:focus {
   background-color: transparent;
   color: #3cb371;
 }
 
-.header-area.style-three .navbar-nav li.touria-dd:hover>a,
-.header-area.style-three .navbar-nav li.touria-dd:focus>a {
+.header-area.style-three .navbar-nav li.touria-dd:hover > a,
+.header-area.style-three .navbar-nav li.touria-dd:focus > a {
   color: #3cb371;
 }
 
@@ -1628,12 +1617,12 @@ picture.jarallax-img img {
   }
 }
 
-.header-area.style-four .navbar-nav li>a {
+.header-area.style-four .navbar-nav li > a {
   color: #0e0e0e;
 }
 
-.header-area.style-four .navbar-nav li>a:hover,
-.header-area.style-four .navbar-nav li>a:focus {
+.header-area.style-four .navbar-nav li > a:hover,
+.header-area.style-four .navbar-nav li > a:focus {
   color: #f7921f;
 }
 
@@ -1648,18 +1637,18 @@ picture.jarallax-img img {
   }
 }
 
-.header-area.style-four .navbar-nav li .touria-dd-menu li>a {
+.header-area.style-four .navbar-nav li .touria-dd-menu li > a {
   color: #0e0e0e;
 }
 
-.header-area.style-four .navbar-nav li .touria-dd-menu li>a:hover,
-.header-area.style-four .navbar-nav li .touria-dd-menu li>a:focus {
+.header-area.style-four .navbar-nav li .touria-dd-menu li > a:hover,
+.header-area.style-four .navbar-nav li .touria-dd-menu li > a:focus {
   background-color: transparent;
   color: #f7921f;
 }
 
-.header-area.style-four .navbar-nav li.touria-dd:hover>a,
-.header-area.style-four .navbar-nav li.touria-dd:focus>a {
+.header-area.style-four .navbar-nav li.touria-dd:hover > a,
+.header-area.style-four .navbar-nav li.touria-dd:focus > a {
   color: #f7921f;
 }
 
@@ -2080,11 +2069,13 @@ picture.jarallax-img img {
   transform: translateX(-50%);
   width: 1px;
   height: 160px;
-  background: -webkit-gradient(linear,
-      left top,
-      right top,
-      from(rgba(60, 179, 113, 0)),
-      to(#3cb371));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(60, 179, 113, 0)),
+    to(#3cb371)
+  );
   background: linear-gradient(90deg, rgba(60, 179, 113, 0) 0%, #3cb371 100%);
   z-index: 10;
 }
@@ -2098,11 +2089,13 @@ picture.jarallax-img img {
   transform: translateX(-50%);
   width: 1px;
   height: 160px;
-  background: -webkit-gradient(linear,
-      left top,
-      right top,
-      from(rgba(60, 179, 113, 0)),
-      to(#3cb371));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(60, 179, 113, 0)),
+    to(#3cb371)
+  );
   background: linear-gradient(90deg, rgba(60, 179, 113, 0) 0%, #3cb371 100%);
   z-index: 10;
 }
@@ -2172,7 +2165,6 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-
   .hero-section .background-slider-nav .background-button-prev,
   .hero-section .background-slider-nav .background-button-next {
     width: 56px;
@@ -2284,7 +2276,9 @@ picture.jarallax-img img {
   }
 }
 
-.hero-section .hero-navigation .swiper-pagination-bullet.swiper-pagination-bullet-active,
+.hero-section
+  .hero-navigation
+  .swiper-pagination-bullet.swiper-pagination-bullet-active,
 .hero-section .hero-navigation .swiper-pagination-bullet:hover,
 .hero-section .hero-navigation .swiper-pagination-bullet:focus {
   border-color: #02a5ce;
@@ -2685,14 +2679,18 @@ picture.jarallax-img img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear,
-      left top,
-      right top,
-      color-stop(8.81%, #161920),
-      color-stop(99.92%, rgba(22, 25, 32, 0.06)));
-  background: linear-gradient(90deg,
-      #161920 8.81%,
-      rgba(22, 25, 32, 0.06) 99.92%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(8.81%, #161920),
+    color-stop(99.92%, rgba(22, 25, 32, 0.06))
+  );
+  background: linear-gradient(
+    90deg,
+    #161920 8.81%,
+    rgba(22, 25, 32, 0.06) 99.92%
+  );
   z-index: 10;
 }
 
@@ -2712,17 +2710,20 @@ picture.jarallax-img img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear,
-      left top,
-      right top,
-      color-stop(8.81%, #161920),
-      color-stop(99.92%, rgba(22, 25, 32, 0.06)));
-  background: linear-gradient(90deg,
-      #161920 8.81%,
-      rgba(22, 25, 32, 0.06) 99.92%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(8.81%, #161920),
+    color-stop(99.92%, rgba(22, 25, 32, 0.06))
+  );
+  background: linear-gradient(
+    90deg,
+    #161920 8.81%,
+    rgba(22, 25, 32, 0.06) 99.92%
+  );
   z-index: 10;
 }
-
 
 .search-form-container {
   position: relative;
@@ -3071,11 +3072,13 @@ picture.jarallax-img img {
 }
 
 .why-choose-section.style-two {
-  background: -webkit-gradient(linear,
-      left top,
-      left bottom,
-      from(rgba(247, 247, 247, 0)),
-      to(#f7f7f7));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(247, 247, 247, 0)),
+    to(#f7f7f7)
+  );
   background: linear-gradient(180deg, rgba(247, 247, 247, 0) 0%, #f7f7f7 100%);
   background-image: none;
 }
@@ -3530,7 +3533,8 @@ picture.jarallax-img img {
   transition: all 0.3s;
 }
 
-.top-catagory-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+.top-catagory-pagination
+  .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #f7921f;
   border-color: #f7921f;
   width: 26px;
@@ -3571,7 +3575,7 @@ picture.jarallax-img img {
   padding-bottom: 0;
 }
 
-.accommodation-card .accommodation-content>* {
+.accommodation-card .accommodation-content > * {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
@@ -3897,11 +3901,13 @@ picture.jarallax-img img {
   width: 100%;
   height: 100%;
   border-radius: 18px;
-  background: -webkit-gradient(linear,
-      left top,
-      left bottom,
-      from(rgba(22, 25, 32, 0)),
-      to(#161920));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(22, 25, 32, 0)),
+    to(#161920)
+  );
   background: linear-gradient(180deg, rgba(22, 25, 32, 0) 0%, #161920 100%);
   z-index: 1;
   -webkit-transition: all 0.3s;
@@ -3968,11 +3974,13 @@ picture.jarallax-img img {
   width: 100%;
   height: 100%;
   border-radius: 18px;
-  background: -webkit-gradient(linear,
-      left top,
-      left bottom,
-      from(rgba(28, 54, 55, 0)),
-      to(#1c3637));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(28, 54, 55, 0)),
+    to(#1c3637)
+  );
   background: linear-gradient(180deg, rgba(28, 54, 55, 0) 0%, #1c3637 100%);
   z-index: -10;
   visibility: hidden;
@@ -4087,7 +4095,6 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-
   .premier-destination-navigation .premier-destination-button-prev,
   .premier-destination-navigation .premier-destination-button-next {
     width: 56px;
@@ -4138,7 +4145,6 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-
   .destination-details-wrapper .destination-details-button-prev,
   .destination-details-wrapper .destination-details-button-next {
     width: 40px;
@@ -4277,7 +4283,7 @@ picture.jarallax-img img {
 .sidebar-widget {
   padding: 30px;
   border-radius: 18px;
-  border: 1px solid #D6D6D6;
+  border: 1px solid #d6d6d6;
   background: #ffffff;
 }
 
@@ -5215,9 +5221,11 @@ picture.jarallax-img img {
   flex-shrink: 0;
   border-radius: 8px;
   border: 0.5px solid #ffffff;
-  background: radial-gradient(157.24% 123.22% at 47.19% -0.63%,
-      rgba(255, 255, 255, 0.4) 0%,
-      rgba(255, 255, 255, 0) 100%);
+  background: radial-gradient(
+    157.24% 123.22% at 47.19% -0.63%,
+    rgba(255, 255, 255, 0.4) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 @media only screen and (min-width: 992px) {
@@ -5315,7 +5323,8 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 992px) {
-  .deals-navigation-container {}
+  .deals-navigation-container {
+  }
 }
 
 .deals-navigation-container .deals-button-prev,
@@ -5340,7 +5349,6 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-
   .deals-navigation-container .deals-button-prev,
   .deals-navigation-container .deals-button-next {
     width: 56px;
@@ -5630,11 +5638,13 @@ picture.jarallax-img img {
   width: 100%;
   height: 100%;
   border-radius: 18px;
-  background: -webkit-gradient(linear,
-      left top,
-      left bottom,
-      from(rgba(28, 54, 55, 0)),
-      to(#1c3637));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(28, 54, 55, 0)),
+    to(#1c3637)
+  );
   background: linear-gradient(180deg, rgba(28, 54, 55, 0) 0%, #1c3637 100%);
   z-index: 1;
 }
@@ -5901,7 +5911,8 @@ picture.jarallax-img img {
   }
 }
 
-.video-gallery-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+.video-gallery-pagination
+  .swiper-pagination-bullet.swiper-pagination-bullet-active {
   border: 2px solid #ffffff;
 }
 
@@ -6238,7 +6249,6 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-
   .testimonial-navigation-container .testimonial-button-prev,
   .testimonial-navigation-container .testimonial-button-next {
     width: 56px;
@@ -6411,7 +6421,6 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1200px) {
-
   .testimonial-button-prev-two,
   .testimonial-button-next-two {
     width: 56px;
@@ -6485,7 +6494,7 @@ picture.jarallax-img img {
   }
 }
 
-.testimonial-section.theme-two .testimonial-navigation-container>div {
+.testimonial-section.theme-two .testimonial-navigation-container > div {
   width: 40px;
   height: 40px;
   -ms-flex-negative: 0;
@@ -6509,15 +6518,15 @@ picture.jarallax-img img {
 }
 
 @media only screen and (min-width: 1400px) {
-  .testimonial-section.theme-two .testimonial-navigation-container>div {
+  .testimonial-section.theme-two .testimonial-navigation-container > div {
     width: 56px;
     height: 56px;
     font-size: 24px;
   }
 }
 
-.testimonial-section.theme-two .testimonial-navigation-container>div:hover,
-.testimonial-section.theme-two .testimonial-navigation-container>div:focus {
+.testimonial-section.theme-two .testimonial-navigation-container > div:hover,
+.testimonial-section.theme-two .testimonial-navigation-container > div:focus {
   background-color: #02a5ce;
   color: #ffffff;
 }
@@ -6747,8 +6756,10 @@ picture.jarallax-img img {
 
 .trusted-partners .trusted-partners-logo a:hover img,
 .trusted-partners .trusted-partners-logo a:focus img {
-  -webkit-filter: brightness(0) saturate(100%) invert(52%) sepia(100%) saturate(621%) hue-rotate(163deg) brightness(94%) contrast(93%);
-  filter: brightness(0) saturate(100%) invert(52%) sepia(100%) saturate(621%) hue-rotate(163deg) brightness(94%) contrast(93%);
+  -webkit-filter: brightness(0) saturate(100%) invert(52%) sepia(100%)
+    saturate(621%) hue-rotate(163deg) brightness(94%) contrast(93%);
+  filter: brightness(0) saturate(100%) invert(52%) sepia(100%) saturate(621%)
+    hue-rotate(163deg) brightness(94%) contrast(93%);
 }
 
 /* Video CSS */
@@ -7119,11 +7130,13 @@ picture.jarallax-img img {
   color: #161920;
   -webkit-transition-duration: 350ms;
   transition-duration: 350ms;
-  background-image: -webkit-gradient(linear,
-      left top,
-      left bottom,
-      from(currentColor),
-      to(currentColor));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(currentColor),
+    to(currentColor)
+  );
   background-image: linear-gradient(currentColor, currentColor);
   background-size: 0% 2px;
   background-repeat: no-repeat;
@@ -7260,11 +7273,13 @@ picture.jarallax-img img {
   line-height: 1.5;
   -webkit-transition-duration: 350ms;
   transition-duration: 350ms;
-  background-image: -webkit-gradient(linear,
-      left top,
-      left bottom,
-      from(currentColor),
-      to(currentColor));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(currentColor),
+    to(currentColor)
+  );
   background-image: linear-gradient(currentColor, currentColor);
   background-size: 0% 2px;
   background-repeat: no-repeat;
@@ -7353,11 +7368,13 @@ picture.jarallax-img img {
   line-height: 1.5;
   -webkit-transition-duration: 350ms;
   transition-duration: 350ms;
-  background-image: -webkit-gradient(linear,
-      left top,
-      left bottom,
-      from(currentColor),
-      to(currentColor));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(currentColor),
+    to(currentColor)
+  );
   background-image: linear-gradient(currentColor, currentColor);
   background-size: 0% 2px;
   background-repeat: no-repeat;
@@ -8813,19 +8830,19 @@ textarea.form-control {
   color: #ffffff;
 }
 
-.contact-card-sm div>div {
+.contact-card-sm div > div {
   font-size: 20px;
   font-weight: 700;
   margin-bottom: 8px;
 }
 
 @media only screen and (min-width: 1200px) {
-  .contact-card-sm div>div {
+  .contact-card-sm div > div {
     font-size: 24px;
   }
 }
 
-.contact-card-sm div>p {
+.contact-card-sm div > p {
   font-size: 16px;
   opacity: 0.7;
 }
@@ -9124,7 +9141,9 @@ textarea.form-control {
   background-color: #3cb371;
 }
 
-.faq-accordion.style-two .accordion-item .accordion-button:not(.collapsed)::after {
+.faq-accordion.style-two
+  .accordion-item
+  .accordion-button:not(.collapsed)::after {
   background-color: #ffffff;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
@@ -9173,7 +9192,9 @@ textarea.form-control {
   background-color: #3cb371;
 }
 
-.faq-accordion.style-three .accordion-item .accordion-button:not(.collapsed)::after {
+.faq-accordion.style-three
+  .accordion-item
+  .accordion-button:not(.collapsed)::after {
   background-color: #ffffff;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
