--- a/style.css
+++ b/style.css
@@ -2002,7 +2002,7 @@ picture.jarallax-img img {
   .hero-content h2 {
     font-size: 80px;
   }
-   .hero-content h1 {
+  .hero-content h1 {
     font-size: 80px;
   }
 }
@@ -9533,10 +9533,11 @@ textarea.form-control {
   font-size: 16px;
 }
 
-
-.woocommerce-button button  { 
-
+a.woocommerce-button {
   background: #3cb371 !important;
+}
 
-
+.shop_table th {
+   background: #3cb371 !important;
+    color: #ffffff !important;
 }
